fixed paths and typos
